# ome-common-cpp

./: CMakeLists.txt  NEWS.md  README.md
cmake/: BoostChecks.cmake  CompilerChecks.cmake  GTest.cmake  Options.cmake  PlatformChecks.cmake  RegexChecks.cmake  SourceArchive.cmake  TemplateInterfaceConfig.cmake.in  ThreadChecks.cmake  XalanChecks.cmake  XercesChecks.cmake
docs/doxygen/: CMakeLists.txt  ome-common.dox.cmake
lib/: CMakeLists.txt
lib/ome/common/: CMakeLists.txt  OMECommonConfig.cmake  OMECommonConfig.cmake.in  base64.h  boolean.h  config-internal.h.in  config.h.in  endian.h  filesystem.h  log.cpp  log.h  module.cpp  module.h  ome-common-config.cmake
lib/ome/common/units/: electric-potential.h  frequency.h  length.h  power.h  pressure.h  temperature.h  time.h  types.h
lib/ome/common/xml/: EntityResolver.cpp  EntityResolver.h  Platform.cpp  Platform.h  String.cpp  String.h
lib/ome/common/xml/dom/: Base.h  Document.h  Element.h  NamedNodeMap.h  Node.h  NodeList.cpp  NodeList.h  Wrapper.h
lib/ome/common/xsl/: Platform.cpp  Platform.h  Transformer.cpp  Transformer.h
lib/ome/compat/: CMakeLists.txt  OMECompatConfig.cmake  OMECompatConfig.cmake.in  array.h  cstdint.h  memory.h  ome-compat-config.cmake  tuple.h  variant.h
lib/ome/global/: CMakeLists.txt  OMEConfig.cmake.in
lib/ome/test/: CMakeLists.txt  io.cpp  main.cpp
scripts/: source-archive
test/: CMakeLists.txt
test/ome-common/: CMakeLists.txt  base64.cpp  boolean.cpp  endian.cpp  filesystem.cpp  module.cpp  mstream.cpp  string.cpp  thread.cpp  units-angle.cpp  units-electric-potential.cpp  units-frequency.cpp  units-length.cpp  units-power.cpp  units-pressure.cpp  units-temperature.cpp  units-time.cpp  units.cpp  units.h  variant.cpp  xalan.cpp  xerces.cpp
test/ome-common/data/: 18x24y5z5t2c8b-text-2013-expected.ome  2012-06-to-2013-06-invalid.xsl  units
test/ome-common/data/schema/: catalog.xml
test/ome-compat/: CMakeLists.txt  array.cpp  cstdint.cpp  memory.cpp  regex.cpp  tuple.cpp  variant.cpp
